test/conformance/chainsaw/mutating-policies/exceptions/exclude-images/exception.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: exclude-images
spec:
  policyRefs:
    - name: exclude-images
      kind: MutatingPolicy
  images:
  - public.ecr.aws/docker/library/busybox:latest
  - public.ecr.aws/docker/library/nginx:latest
