test/conformance/chainsaw/mutating-policies/exceptions/exclude-images/skipped-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: skipped-pod
spec:
  containers:
  - name: container01
    image: public.ecr.aws/docker/library/busybox:latest
    securityContext:
      allowPrivilegeEscalation: true
  - name: container02
    image: public.ecr.aws/docker/library/ubuntu:latest
    securityContext:
      allowPrivilegeEscalation: true
