test/conformance/chainsaw/mutating-policies/exceptions/exclude-images/allowed-pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-pod
  labels:
    app: test
    imageExcluded: "true"
spec:
  containers:
  - name: container01
    image: nginx:latest
