test/conformance/chainsaw/mutating-policies/exceptions/exclude-images/non-allowed-pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: non-allowed-pod
  labels:
    app: test
    imageExcluded: "false"
spec:
  containers:
  - name: container01
    image: ubuntu:latest
